--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "got": "^6.7.1",
     "nodemon": "^1.11.0",
     "prettyjson": "^1.2.1",
+    "jimp": "^0.2.27",
     "request": "^2.81.0"
   }
 }
